2006-01-17  Alexis Sukrieh  <sukria@backup-manager.org>

	* backup-manager:
	  + added the path to dvd+rw-format
	* lib/actions.sh:
	  + now blank the DVD media explicitly before burning data.

2006-01-17  Alexis Sukrieh  <sukria@backup-manager.org>

	* lib/files.sh:
	  + Applied patch from Michel Grentzinger <mic.grentz@online.fr> for
	  enhancing the way space occupation is computed (bug #22).

2006-01-17  Alexis Sukrieh  <sukria@backup-manager.org>

	* backup-manager:
	  + added path to /usr/bin/dar
	* lib/backup-methods.sh:
	  + major rewrite/clean of backup_method_tarball()
	  + support for BM_ARCHIVE_FILETYPE "dar"
	* lib/dialog.sh:
	  + check that dar is present.
	* backup-manager.conf.tpl
	  + New configuration variable "BM_TARBALL_SLICESIZE".

2006-01-05  Alexis Sukrieh  <sukria@backup-manager.org>

	* backup-manager.conf.tpl:
	  + added BM_MYSQL_SAFEDUMPS for providing a way to perform full clena
	  backup with the "--opt" switch (closes bug #15)
	  + Changed the behaviour of BM_MYSQL_DATABASES so we can put here a
	  wildcard "__ALL__" that means backing up every databases at once.
	* lib/backup-methods.sh:
	  + Changes in backup_mysql().

2005-12-31  Alexis Sukrieh  <sukria@backup-manager.org>

	* Bug #14 closed. Backup methods are handled better so we can
	  safely use several methods in the same configruation file.
	  + lib/actions.sh: pass $method to each method.
	  + lib/backup-methods.sh: handle $method rather than $BM_ARCHIVE_METHOD.
	  + t/t06-bug14.sh: Regression-proof test for this bug.

2005-12-19  Alexis Sukrieh	<sukria@backup-manager.org>

	* INSTALL:
	  + bits about dependencies
	* NEWS:
	  + The 0.6 Changelog
	* doc/DISCLAIMER:
	  + Removed, not needed anymore.
	* doc/README:
	  + Bits about the available formats.
	* doc/user-guide.txt:
	  + Added the text version in the repository, so users
	    can have a light version of the guide with the release.
	* doc/version.ent:
	  + Revision: 1.0
